--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build && cp .env dist/src/.env",
+    "build": "nest build",
+    "build:vps": "nest build && cp .env dist/src/.env",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "seed": "ts-node prisma/seeders/userSeed.ts",
     "start": "nest start",
